test/sema/negative/return1.impala
fn iid(i: int) -> int {
    i
}

fn main() -> () {
    let x: bool = iid(5);
}
