test/sema/negative/return1.out
return1.impala:6 col 19 - 24: error: return type 'i32' does not match expected type 'bool'
